small changes, done

--- a/rv2015/sections/Algorithm.tex
+++ b/rv2015/sections/Algorithm.tex
@@ -180,7 +180,7 @@ Figure \ref{fig:until} shows the reduction algorithm for \emph{until} temporal f
 
 %%% TAU UNTIL
 \begin{figure}
-\tiny
+\small
 \begin{align*}
 \mathbf{reduce}(\sigma_i,\tau, i,\mathbb{S}^i_{\alpha\, \mathcal{U}_{[l,h]}\, \beta} ,\rp{j}{\alpha\, \mathcal{U}_{[l,h]}\, \beta}) = \left\{
 \begin{aligned}
