--- a/rv2015/sections/Architecture.tex
+++ b/rv2015/sections/Architecture.tex
@@ -38,7 +38,7 @@ For example, safety-critical buses in star configurations which don't have a sin
 \end{figure}
 
 
-\subsection{Architecture Outline}
+%\subsection{Architecture Outline}
 An outline of our monitor architecture is shown in Figure \ref{fig:architecture}. 
 The monitor is connected to the target system as an additional passive node on its broadcast bus. 
 % sfmap paragraph
