--- a/rv2015/sections/Background.tex
+++ b/rv2015/sections/Background.tex
@@ -7,8 +7,9 @@
 	% horizon is delay
 	% observation map is semi-formal mapping
 In this section we briefly introduce the background concepts and review relevant existing work that put the current work in perspective.  
-\subsection{Monitoring Safety-Critical Embedded Systems}
-\label{sec:bg:sc_monitor}
+
+\textbf{Monitoring safety-critical embedded systems.}
+%\label{sec:bg:sc_monitor}
 Goodloe and Pike present a thorough survey of monitoring distributed real-time systems in \cite{Goodloe2010}. Notably, they present a set of monitor architecture constraints and propose three abstract monitor architectures in the context of monitoring these types of systems.
 %
 %In \cite{Pike2011} Pike et. al update these constraints with the acronym ``FaCTS'': Functionality, Certifiability, Timing, and SWaP (size, weight and power). 
@@ -34,7 +35,7 @@ This is a simple architecture which requires few (essentially no) changes to the
 %%% Reinbacher
 %%% Heffernan
 %%% Precis
-\subsection{Monitors}
+\textbf{Monitors.}
 Our monitoring algorithm is similar to existing dynamic programming and formula-rewriting based algorithms. 
 % need to get good novelty wording
 % topics:
