--- a/rv2015/sections/Conclusion.tex
+++ b/rv2015/sections/Conclusion.tex
@@ -1,6 +1,9 @@
 %%%% Conclusion section
 
 \section{Conclusion}
-We have developed an online, real-time monitoring approach that targets an autonomous research vehicle, describing our experience. 
+We have developed a runtime monitoring approach for ARV system. 
+%We have developed an online, real-time monitoring approach that targets an autonomous research vehicle, describing our experience. 
 Rather than instrumenting the target system, we passively monitor the system, generating the system trace from the observed network state.
-We have developed an efficient runtime monitoring algorithm, \monitor, that eagerly checks for violations of properties written in our future-bounded propositional MTL. We have shown the efficiency of \monitor by implementing it on an embedded platform and evaluating it against replayed logs obtained from system testing of the ARV. \monitor was able to detect violations of several safety requirements in real-time.
+We have developed an efficient runtime monitoring algorithm, \monitor, that eagerly checks for violations of properties written in our future-bounded propositional MTL. 
+We have shown the efficiency of \monitor by implementing it and evaluating it against logs obtained from system testing of the ARV. 
+\monitor was able to detect violations of several safety requirements in real-time.
