last read-through, a bunch of small fixes. Submitted

--- a/rv2015/command.tex
+++ b/rv2015/command.tex
@@ -159,7 +159,7 @@
 
 %\newcommand{\mid}{\ensuremath{\;|\;}}
 %%% adding some new ones
-\newcommand{\wdelay}{\ensuremath{\Delta^w}}
+\newcommand{\wdelay}{\ensuremath{\Delta^w}\xspace}
 \newcommand{\tempSub}{\funcname{tempSub}\xspace}
 \newcommand{\reduce}{\funcname{reduce}\xspace}
 \newcommand{\histSt}[2][\policy]{\ensuremath{\mathbb{S}^{#2}_{#1}}}
