--- a/rv2015/rv2015_bibtex.bib
+++ b/rv2015/rv2015_bibtex.bib
@@ -428,8 +428,10 @@
   author = {Kane, Aaron and Chowdhury, Omar and Koopman, Philip and Datta, An},
   title = {A Case Study on Runtime Monitoring of an Autonomous Research Vehicle
 	(ARV) System},
-  institution = {Carnegie Mellon University},
+  institution = {CMU},
+  //institution = {Carnegie Mellon University},
   year = {2015},
+  note = {See \url{http://users.ece.cmu.edu/~koopman/thesis/kane.pdf} temporarily for proofs},
   owner = {akane},
   timestamp = {2015.04.26}
 }
@@ -448,5 +450,4 @@
   file = {Basin2012.pdf:mPapers\\Basin2012.pdf:PDF},
   isbn = {978-3-642-29859-2},
   timestamp = {2013.09.03},
-  url = {http://dx.doi.org/10.1007/978-3-642-29860-8_20}
 }
