--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -57,7 +57,7 @@
 \newcommand{\precis}{\textit{pr\`ecis}\xspace}
 \newcommand{\pst}{\ensuremath{S^i_\psi}}
 \newcommand{\rpt}[3]{\ensuremath{\langle #1, #2 \rangle}_{#3}}
-\newcommand{\greduce}{\textit{reduce}}
+\newcommand{\greduce}{\textit{reduce}\xspace}
 \newcommand{\nextmtl}{\bigcirc}
 \newcommand{\lastmtl}{\dot\circ}
 
@@ -70,8 +70,10 @@
 \title{A Case Study on Runtime Monitoring of an Autonomous Research Vehicle (ARV) System}
 
 
-\author{Aaron Kane \and Omar Chowdhury \and Anupam Datta \and Philip Koopman}
-\institute{Carnegie Mellon University, Pittsburgh, PA\\ \email{akane@cmu.edu, omarc@cmu.edu, danupam@cmu.edu, koopman@cmu.edu}}
+\author{Aaron Kane\inst{1} \and Omar Chowdhury\inst{2} \and Anupam Datta\inst{1} \and Philip Koopman\inst{1}}
+\institute{Carnegie Mellon University, Pittsburgh, PA
+			\and  Purdue University, IN\\ 
+			\email{akane@cmu.edu, ochowdhu@purdue.edu, danupam@cmu.edu, koopman@cmu.edu}}
 
 
 
