--- a/rv2015/sections/Conclusion.tex
+++ b/rv2015/sections/Conclusion.tex
@@ -1,7 +1,7 @@
 %%%% Conclusion section
 
 \section{Conclusion}
-We have developed a runtime monitoring approach for ARV system. 
+We have developed a runtime monitoring approach for an autonomous research vehicle. 
 %We have developed an online, real-time monitoring approach that targets an autonomous research vehicle, describing our experience. 
 Rather than instrumenting the target system, we passively monitor the system, generating the system trace from the observed network state.
 We have developed an efficient runtime monitoring algorithm, \monitor, that eagerly checks for violations of properties written in our future-bounded propositional MTL. 
